[package]
name = "cursor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
device_query = "1.1.1"
raylib = {path = "../raylib-rs/raylib", features = ["serde"]}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3
